next/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextjs-ingress
  namespace: nextjs
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: next.sreyphea.site  
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nextjs-service
            port:
              number: 3000
